--- a/book.html
+++ b/book.html
@@ -30,8 +30,92 @@
           </button>
         </div>
       </header>
-      <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">Sorry No Books Uploaded Yet</p>
-      
+      <section class="text-gray-600 body-font overflow-hidden">
+        <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-wrap -m-12">
+            <div class="p-12 md:w-1/2 flex flex-col items-start">
+              <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Story</span>
+              <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">911 Crime Stories Chapter 1</h2>
+              <p class="leading-relaxed mb-8">911 is a crime based story where a superintendent is trying to solve cases . he also has a team with high intelligence. The twist in the story bring out the suspense. The story is fully suspense based. Just becalm have a nice seat and read all the chapters as there is no end for this series.Chapter one is based on a gang which is unknown. The pieces of the story complete the puzzle and finally comes to a end. Read it to known how the end goes</p>
+              <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+                <a class="text-indigo-500 inline-flex items-center" href="911(part 1) (1).pdf" target="_blank">Read Now
+                  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14"></path>
+                    <path d="M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+                <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>0.6k
+                </span>
+              </div>
+              <a class="inline-flex items-center">
+                <img alt="blog" src="https://source.unsplash.com/150x150/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                <span class="flex-grow flex flex-col pl-4">
+                  <span class="title-font font-medium text-gray-900">Ishan Mali</span>
+                  <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
+                </span>
+              </a>
+            </div>
+            <div class="p-12 md:w-1/2 flex flex-col items-start">
+              <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Story</span>
+              <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">911 Crime Stories Chapter 2 (16+)</h2>
+              <p class="leading-relaxed mb-8">Chapter 2 is all dependent on next 2 chapters.but it has a meaning.read how steve gets the reason on which a serial killer is murdering people.</p>
+              <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+                <a class="text-indigo-500 inline-flex items-center" href="Chapter 2 (911).pdf" target="_blank">Read Now
+                  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14"></path>
+                    <path d="M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+                <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>0.3k
+                </span>
+              </div>
+              <a class="inline-flex items-center">
+                <img alt="blog" src="https://source.unsplash.com/130x130/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                <span class="flex-grow flex flex-col pl-4">
+                  <span class="title-font font-medium text-gray-900">Ishan Mali</span>
+                  <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="p-12 md:w-1/2 flex flex-col items-start">
+          <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Poem</span>
+          <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">Lockdown</h2>
+          <p class="leading-relaxed mb-8">This poem is written in the first lockdown in india . The poet has written it in hindi language. Which includes his feeling's.</p>
+          <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+            <a class="text-indigo-500 inline-flex items-center" href="WhatsApp Image 2021-10-10 at 17.16.37-converted.pdf" target="_blank">Read Now
+              <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M5 12h14"></path>
+                <path d="M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+            <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+              <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                <circle cx="12" cy="12" r="3"></circle>
+              </svg>0.5k
+            </span>
+          </div>
+          <a class="inline-flex items-center">
+            <img alt="blog" src="https://source.unsplash.com/130x130/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+            <span class="flex-grow flex flex-col pl-4">
+              <span class="title-font font-medium text-gray-900">Ishan Mali</span>
+              <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+      </section>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
