--- a/book.html
+++ b/book.html
@@ -87,34 +87,64 @@
             </div>
           </div>
         </div>
-        <div class="p-12 md:w-1/2 flex flex-col items-start">
-          <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Poem</span>
-          <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">Lockdown</h2>
-          <p class="leading-relaxed mb-8">This poem is written in the first lockdown in india . The poet has written it in hindi language. Which includes his feeling's.</p>
-          <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
-            <a class="text-indigo-500 inline-flex items-center" href="WhatsApp Image 2021-10-10 at 17.16.37-converted.pdf" target="_blank">Read Now
-              <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M5 12h14"></path>
-                <path d="M12 5l7 7-7 7"></path>
-              </svg>
-            </a>
-            <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
-              <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                <circle cx="12" cy="12" r="3"></circle>
-              </svg><p id="like3">0</p>
-            </span>
+        <section class="text-gray-600 body-font overflow-hidden">
+          <div class="container px-5 py-24 mx-auto">
+            <div class="flex flex-wrap -m-12">
+              <div class="p-12 md:w-1/2 flex flex-col items-start">
+                <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Poem</span>
+                <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">Lockdown</h2>
+                <p class="leading-relaxed mb-8">This poem is written in the first lockdown in india . The poet has written it in hindi language. Which includes his feeling's.</p>
+                <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+                  <a class="text-indigo-500 inline-flex items-center" href="WhatsApp Image 2021-10-10 at 17.16.37-converted.pdf" target="_blank">Read Now
+                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M5 12h14"></path>
+                      <path d="M12 5l7 7-7 7"></path>
+                    </svg>
+                  </a>
+                  <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                      <circle cx="12" cy="12" r="3"></circle>
+                    </svg>1.2K
+                  </span>
+                </div>
+                <a class="inline-flex items-center">
+                  <img alt="blog" src="https://source.unsplash.com/130x130/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                  <span class="flex-grow flex flex-col pl-4">
+                    <span class="title-font font-medium text-gray-900">Ishan Mali</span>
+                    <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
+                  </span>
+                </a>
+              </div>
+              <div class="p-12 md:w-1/2 flex flex-col items-start">
+                <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">Latest Story</span>
+                <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">No Life Belongs</h2>
+                <p class="leading-relaxed mb-8">THIS STORY IS ON A PANDEMIC SURVIVED BY HUMANS. THIS GOES IN HORRIBLE MANNER AND KILLS AROUND 30% OF HUMAN POPULLATION.DISEASE NAMES TAKEN IN THIS STORY ARE REAL BUT IT IS A FRICTIONAL STORY.</p>
+                <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+                  <a class="text-indigo-500 inline-flex items-center" href="NO LIFE BELONGS.pdf" target="_blank">Read Now
+                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M5 12h14"></path>
+                      <path d="M12 5l7 7-7 7"></path>
+                    </svg>
+                  </a>
+                  <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                      <circle cx="12" cy="12" r="3"></circle>
+                    </svg>1.5K
+                  </span>
+                </div>
+                <a class="inline-flex items-center">
+                  <img alt="blog" src="https://source.unsplash.com/130x130/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                  <span class="flex-grow flex flex-col pl-4">
+                    <span class="title-font font-medium text-gray-900">Ishan Mali</span>
+                    <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
+                  </span>
+                </a>
+              </div>
+            </div>
           </div>
-          <a class="inline-flex items-center">
-            <img alt="blog" src="https://source.unsplash.com/130x130/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
-            <span class="flex-grow flex flex-col pl-4">
-              <span class="title-font font-medium text-gray-900">Ishan Mali</span>
-              <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
-            </span>
-          </a>
-        </div>
-      </div>
-    </div>
+        </section>
       </section>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
